- ask loading modules from /modules if needed

1.14:
- fix segfault in USB detection code (when no module match, #32624)

1.13:
- use module names instead of filenames
- convert module name to filename before loading it
  (using modules.dep to get filename)
- keep module in dependencies list even if it has no dependencies
  (to keep track of its filename)
- use '_' in module names when explicitely loading modules (cosmetics)

1.12:
- adapt to new list_modules

1.11:
- use ldetect/libmodprobe/libpci instead of custom pci/usb probe
- rename rescue "GUI" as rescue "menu"

1.10.1:
- link init with dietlibc instead of minilibc on ix86/x86-64
- add missing includes for wireless
- fix build of pppoe by using dietlibc termios header

1.10:
- add ide-disk module
- load ide-disk when detecting disks (ide is now modularized...)

1.9:
- ide is now modularized

1.8:
- build pcmcia header only on i386/x86_64 (#30668)
- use api.mandriva.com to retrieve mirror list (#29346)

1.7:
- don't kill our init/klogd when running stage2
  (bug introduced when switching to initramfs)

1.6:
- write DNS settings in temporary ifcfg file
  (fixes resolv.conf post install)

1.5:
- fix infinite loop in wired interface mode