@@ -1,4 +1,5 @@
 - ask loading modules from /modules if needed
+- read modules description from /modules/modules.description
 
 1.14:
 - fix segfault in USB detection code (when no module match, #32624)
